# SinfarTrader

./: .gitmodules  CMakeLists.txt
src/: Color.h  Database.h  Database.tpp  Market.cpp  Market.h  MarketServer.h  MarketServer.tpp  Order.cpp  Order.h  RessourcesManager.cpp  RessourcesManager.h  SinfarClient.h  SinfarClient.tpp  main.cpp
